web/html/src/branding/css/susemanager/components/inputs.less
@input-height: 35px;

.form-control,
.form-control--react-select > div:first-of-type {
  color: @eos-bc-gray-1000;
  height: @input-height;
  max-width: 100%;
  border-radius: @border-radius-base !important;
  border-color: @input-border-color !important;
  box-shadow: none !important;
  font-size: @font-size-base;
}

.form-control {
  padding: 8px !important;

  &:focus {
    border-color: @eos-bc-blue-500 !important;
    outline: none !important;
  }

  &.disabled,
  &:disabled {
    color: @eos-bc-gray-700;
    pointer-events: auto;
    cursor: not-allowed;

    &:focus {
      border-color: @input-border-color !important;
    }
  }

  &:read-only {
    color: @eos-bc-gray-700;
    pointer-events: auto;
    cursor: default;

    &:focus {
      border-color: @input-border-color !important;
    }
  }

  &::placeholder {
    color: @input-placeholder;
    opacity: 1;
  }
}

// TODO: Bind this class to the react-select control once we upgrade react-select, see https://react-select.com/styles#the-classnames-prop
.form-control--react-select > div:first-of-type {
  &:hover {
    border-color: @eos-bc-blue-500 !important;
    outline: none !important;
  }
}

textarea.form-control,
select[multiple],
select[size] {
  height: auto;
}

.input-group-addon {
  border-color: @input-border-color !important;
}

